[package]
name = "aoc2023-05-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
itertools = "0.12.0"
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
