[package]
name = "aoc2023-12-2"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
num-integer = "0.1.45"
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
